--- a/src/pages/NoteBrowse/style.module.css
+++ b/src/pages/NoteBrowse/style.module.css
@@ -2,7 +2,7 @@
   background-color: white;
   padding: 30px;
   box-shadow: 2px 1px 4px 1p rgba(0, 0, 0, 0.4);
-  background-image: url("../../assets/images/h.jpg");
+  background-image: url("../../assets/images/female.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: top;
